added login doc and token models
